# tcpcopy

./: .gitignore  AUTHORS  Architecture.md  Beginners.md  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  Usage.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
auto/: define  feature  have  have_headers  headers  include  init  install  linux  make  modules  nohave  options  sources  summary
auto/cc/: acc  clang  conf  gcc  icc  name
auto/os/: conf  linux
auto/types/: sizeof  typedef  uintptr_t  value
doc/: Architecture.md  Beginners.md  Pre-Warming.md  Usage.md
docs/: TCPCopy_Manual(Chinese).doc  TCPCopy_Manual.doc
images/: tcp_state_machine.md
src/: Makefile.am  Makefile.in
src/communication/: Makefile.am  Makefile.in  msg.c  msg.h  tc_msg.h  tc_socket.c  tc_socket.h
src/core/: Makefile  Makefile.am  Makefile.in  daemon.c  debug.c  hash.c  hash.h  link_list.c  link_list.h  tc_alloc.c  tc_alloc.h  tc_array.c  tc_array.h  tc_common.c  tc_conf_file.c  tc_conf_file.h  tc_config.h  tc_daemon.c  tc_hash.c  tc_hash.h  tc_link_list.c  tc_link_list.h  tc_log.c  tc_log.h  tc_palloc.c  tc_palloc.h  tc_rbtree.c  tc_rbtree.h  tc_signal.c  tc_signal.h  tc_time.c  tc_time.h  xcopy.h
src/core/.deps/: daemon.Po  debug.Po  hash.Po  link_list.Po
src/digest/: Makefile.am  tc_evp.c  tc_evp.h
src/event/: Makefile.am  Makefile.in  cpy_event.c  cpy_event.h  cpy_select_module.c  cpy_select_module.h  net_event.c  net_event.h  select_module.c  select_module.h  select_server.c  select_server.h  select_server_wrapper.c  select_server_wrapper.h  tc_epoll_module.c  tc_epoll_module.h  tc_event.c  tc_event.h  tc_event_timer.c  tc_event_timer.h  tc_select_module.c  tc_select_module.h
src/interception/: Makefile.am  Makefile.in  delay.c  delay.h  hash.c  hash.h  intercept.h  interception.c  interception.h  linklist.c  linklist.h  main.c  nl.c  nl.h  nl_firewall.c  nl_firewall.h  router.c  router.h  tc_capture.c  tc_combine.c  tc_combine.h  tc_delay.c  tc_delay.h  tc_interception.c  tc_interception.h  tc_pool.c  tc_pool.h  tc_router.c  tc_router.h  tc_server_common.c  tc_server_common.h
src/log/: Makefile.am  Makefile.in  log.c  log.h
src/mysql/: Makefile.am  Makefile.in  m_string.h  my_attribute.h  my_config.h  my_global.h  pairs.c  pairs.cpp  pairs.h  password.c  password.h  protocol.c  protocol.h  sha1.c
src/tcpcopy/: Makefile.am  Makefile.in  address.c  address.h  getopt.c  getopt.h  main.c  main.cpp  manager.c  manager.h  send.c  send.cpp  send.h  session.c  session.cpp  session.h  tc_address.c  tc_address.h  tc_manager.c  tc_manager.h  tc_message_module.c  tc_message_module.h  tc_offline_module.c  tc_offline_module.h  tc_packets_module.c  tc_packets_module.h  tc_session.c  tc_session.h  tc_udp_session.c  tc_udp_session.h  tcpcopy.h
src/util/: Makefile  Makefile.am  Makefile.in  tc_util.c  tc_util.h  util.c  util.h
src/util/.deps/: util.Po
