noinst_LIBRARIES=libevent.a

libevent_a_SOURCES=\
                   select_server.h select_server.c\
				   select_server_wrapper.h select_server_wrapper.c\
				   net_event.h select_module.h\
				   net_event.c select_module.c
libevent_a_LIBADD=\
                   ../core/libcore.a\
                   ../log/liblog.a
