noinst_LIBRARIES=libevent.a

libevent_a_SOURCES=\
                   select_server.h select_server.c\
				   select_server_wrapper.h select_server_wrapper.c\
				   cpy_event.h cpy_select_module.h\
				   cpy_event.c cpy_select_module.c
libevent_a_LIBADD=\
                   ../core/libcore.a\
                   ../log/liblog.a
