noinst_LIBRARIES=libevent.a

libevent_a_SOURCES=\
                   select_server.h select_server.c\
                   select_server_wrapper.h select_server_wrapper.c\
                   tc_event.h tc_select_module.h\
                   tc_event.c tc_select_module.c
libevent_a_LIBADD=\
                   ../core/libcore.a\
                   ../log/liblog.a
