noinst_LIBRARIES=libmysql.a                                                                                                          

libmysql_a_SOURCES=\
				  my_config.h my_compiler.h my_dbug.h my_global.h my_attribute.h pairs.h m_string.h my_global.h \
				  sha1.h password.h protocol.h pairs.cpp protocol.c sha1.c password.c 
libmysql_a_LIBADD=\
				 ../log/liblog.a
