noinst_LIBRARIES=libmysql.a

libmysql_a_SOURCES=\
                   my_config.h my_compiler.h my_dbug.h my_global.h\
                   my_attribute.h pairs.h m_string.h\
                   sha1.h password.h protocol.h pairs.c protocol.c sha1.c password.c 
libmysql_a_LIBADD=\
                   ../core/libcore.a\
                   ../log/liblog.a
